<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.reposList.ReposListFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_menu"/>

    <!-- SUCCESSFUL LOADING -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/repos_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <!-- ERROR LOADING -->
    <LinearLayout
        android:id="@+id/error_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/error_loading_btn"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_connection_error" />

        <TextView
            android:id="@+id/error_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_error"
            android:textColor="@color/error_loading_red"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/error_hint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_error_hint"
            android:textSize="14sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/error_loading_btn"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_green_button"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <!-- EMPTY -->
    <LinearLayout
        android:id="@+id/empty_repos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/empty_repos_btn"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_empty_repos" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_repos"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_repos_hint"
            android:textSize="14sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/empty_repos_btn"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_green_button"
        android:text="@string/refresh"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <!-- LOADING -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>